fix: globals.css overlapping shadcn styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,18 +8,6 @@ body,
   height: 100%;
 }
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
 body {
   color: var(--foreground);
   background: var(--background);
